--- a/src/nodeElement/NodeElement.css
+++ b/src/nodeElement/NodeElement.css
@@ -1,4 +1,4 @@
-.container-stem-cell-title {
+.container-node-element-title {
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,13 +6,14 @@
     justify-content: center;
 }
 
-.stem-cell-title {
+.node-element-title {
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
+    font-size: 90%;
     text-decoration: none;
     color: inherit;
     overflow: hidden;
@@ -21,11 +22,11 @@
     border-radius: 70%;
 }
 
-.stem-cell-title:hover {
+.node-element-title:hover {
     border-radius: 60%;
     opacity: 0.5;
 }
 
-.stem-cell-title:visited {
+.node-element-title:visited {
     color: black;
 }
